--- a/notebooks/05- Sunburst Charts.ipynb
+++ b/notebooks/05- Sunburst Charts.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Sunburst Chart:\n",
     "A ring chart, also known as a **sunburst** chart or a multilevel pie chart, is used to visualize hierarchical data, depicted by concentric circles. The circle in the center represents the root node, with the hierarchy moving outward from the center. A segment of the inner circle bears a hierarchical relationship to those segments of the outer circle which lie within the angular sweep of the parent segment.[Sunburst Char on Wikipedia](https://en.wikipedia.org/wiki/Pie_chart#Ring)\n",
     "\n",
     "\n",
