--- a/notebooks/06- Bubble Charts.ipynb
+++ b/notebooks/06- Bubble Charts.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Bubble Chart:\n",
     "A bubble chart is a type of chart that displays three dimensions of data. Each entity with its triplet *(v1, v2, v3)* of associated data is plotted as a disk that expresses two of the *vi* values through the disk's *xy* location and the third through its size. Bubble charts can facilitate the understanding of social, economical, medical, and other scientific relationships. [Bubble Chart on Wikipedia](https://en.wikipedia.org/wiki/Bubble_chart)\n",
     "\n",
     "### A bubble chart is essentially a scatter plot with the size of markers customized"
