--- a/notebooks/07- Gantt Chart.ipynb
+++ b/notebooks/07- Gantt Chart.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Gantt Charts:\n",
     "A Gantt chart is a type of bar chart that illustrates a project schedule, named after its inventor, Henry Gantt (1861–1919), who designed such a chart around the years 1910–1915. Modern Gantt charts also show the dependency relationships between activities and current schedule status. [Gantt Chart on Wikipedia](https://en.wikipedia.org/wiki/Gantt_chart)\n",
     "\n",
     "* A Gantt chart, or harmonogram, is a type of bar chart that illustrates a project schedule.\n",
