--- a/notebooks/08- Error Bars.ipynb
+++ b/notebooks/08- Error Bars.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Error Bars:\n",
     "Error bars are graphical representations of the variability of data and used on graphs to indicate the error or uncertainty in a reported measurement. They give a general idea of how precise a measurement is, or conversely, how far from the reported value the true (error free) value might be. \n",
     "\n",
     "Error bars often represent one standard deviation of uncertainty, one standard error, or a particular confidence interval (e.g., a 95% interval). These quantities are not the same and so the measure selected should be stated explicitly in the graph or supporting text. [Error Bar on Wikipedia](https://en.wikipedia.org/wiki/Error_bar)\n",
