--- a/notebooks/09- Box Plots.ipynb
+++ b/notebooks/09- Box Plots.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Box Plot:\n",
     "* In descriptive statistics, a box plot or boxplot is a method for graphically depicting groups of numerical data through their quartiles. \n",
     "* Box plots may also have lines extending from the boxes (whiskers) indicating variability outside the upper and lower quartiles, hence the terms box-and-whisker plot and box-and-whisker diagram. \n",
     "* Outliers may be plotted as individual points. \n",
