--- a/notebooks/04- Pie Charts.ipynb
+++ b/notebooks/04- Pie Charts.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Pie Chart:\n",
     "A pie chart (or a circle chart) is a circular statistical graphic, which is divided into slices to illustrate numerical proportion. In a pie chart, the arc length of each slice (and consequently its central angle and area), is proportional to the quantity it represents. While it is named for its resemblance to a pie which has been sliced, there are variations on the way it can be presented. [Pie Chart on Wikipedia](https://en.wikipedia.org/wiki/Pie_chart)\n",
     "\n",
     "Pie charts can be used to show percentages of a whole, and represents percentages at a set point in time. Unlike bar graphs and line graphs, pie charts do not show changes over time. \n",
