--- a/notebooks/02- Scatter Plots.ipynb
+++ b/notebooks/02- Scatter Plots.ipynb
@@ -48,7 +48,17 @@
     "import plotly.express as px\n",
     "df = px.data.iris() # iris is a pandas DataFrame\n",
     "fig = px.scatter(df, x=\"sepal_width\", y=\"sepal_length\")\n",
-    "fig.show()"
+    "fig.show()\n",
+    "#df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['species'].unique()"
    ]
   },
   {
@@ -224,7 +234,7 @@
     "    marker=dict(\n",
     "        size=16,\n",
     "        color=np.random.randn(500), #set color equal to a variable\n",
-    "        colorscale='Viridis', # one of plotly colorscales\n",
+    "        colorscale='Peach', # one of plotly colorscales\n",
     "        showscale=True\n",
     "    )\n",
     "))\n",
@@ -245,11 +255,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%%time\n",
+    "%%time\n",
     "import plotly.graph_objects as go\n",
     "import numpy as np\n",
     "\n",
     "N = 100000\n",
+    "# notice Scattergl not Scatter\n",
     "fig = go.Figure(data=go.Scattergl(\n",
     "    x = np.random.randn(N),\n",
     "    y = np.random.randn(N),\n",
@@ -283,15 +294,15 @@
     "x = np.cos(z)\n",
     "y = np.sin(z)\n",
     "\n",
-    "N = 1000\n",
-    "t = np.linspace(0, 10, 100)\n",
-    "y = np.sin(t)\n",
+    "#N = 1000\n",
+    "#t = np.linspace(0, 10, 100)\n",
+    "#y = np.sin(t)\n",
     "\n",
     "trace=go.Scatter3d(x=x, y=y, z=z,mode='markers',\n",
-    "marker=dict(\n",
-    "size=12,\n",
-    "color=z, # set color to an array/list of desired values\n",
-    "colorscale='Viridis')\n",
+    "    marker=dict(\n",
+    "    size=12,\n",
+    "    color=z, # set color to an array/list of desired values\n",
+    "    colorscale='Viridis')\n",
     ")\n",
     "fig = go.Figure(trace)\n",
     "fig.show()\n"
