--- a/notebooks/03- Bar Charts.ipynb
+++ b/notebooks/03- Bar Charts.ipynb
@@ -35,8 +35,8 @@
    "source": [
     "# With px.bar, each row of the DataFrame is represented as a rectangular mark.\n",
     "import plotly.express as px\n",
-    "data_libya = px.data.gapminder().query(\"country == 'Libya'\")\n",
-    "fig = px.bar(data_libya, x='year', y='pop')\n",
+    "data_italy = px.data.gapminder().query(\"country == 'Italy'\")\n",
+    "fig = px.bar(data_italy, x='year', y='pop')\n",
     "fig.show()"
    ]
   },
@@ -93,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df"
+    "df.head()"
    ]
   },
   {
@@ -330,7 +330,8 @@
     "    marker_color=colors, # marker color can be a single color value or an iterable\n",
     "    width=[0.5, 0.5, 0.5, 1, 0.5] # customize width here\n",
     ")])\n",
-    "fig.update_layout(title_text='Least Used Feature')"
+    "fig.update_layout(title_text='Least Used Feature')\n",
+    "fig.show()"
    ]
   },
   {
