--- a/notebooks/05- Sunburst Charts.ipynb
+++ b/notebooks/05- Sunburst Charts.ipynb
@@ -33,18 +33,31 @@
    "outputs": [],
    "source": [
     "import plotly.express as px\n",
+    "import pandas as pd\n",
     "data = dict(\n",
     "    character=[\"Eve\", \"Cain\", \"Seth\", \"Enos\", \"Noam\", \"Abel\", \"Awan\", \"Enoch\", \"Azura\"],\n",
     "    parent=[\"\", \"Eve\", \"Eve\", \"Seth\", \"Seth\", \"Eve\", \"Eve\", \"Awan\", \"Eve\" ],\n",
     "    value=[10, 14, 12, 10, 2, 6, 6, 4, 4])\n",
     "\n",
-    "fig =px.sunburst(\n",
+    "\n",
+    "fig = px.sunburst(\n",
     "    data,\n",
     "    names='character',\n",
     "    parents='parent',\n",
     "    values='value',\n",
     ")\n",
-    "fig.show()"
+    "fig.show()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.io as pio\n",
+    "pio.write_html(fig, 'sunburst.html')"
    ]
   },
   {
