--- a/notebooks/07- Gantt Chart.ipynb
+++ b/notebooks/07- Gantt Chart.ipynb
@@ -30,11 +30,11 @@
    "source": [
     "import plotly.figure_factory as ff\n",
     "\n",
-    "df = [dict(Task=\"Job A\", Start='2009-01-01', Finish='2009-02-28'),\n",
+    "data = [dict(Task=\"Job A\", Start='2009-01-01', Finish='2009-02-28'),\n",
     "      dict(Task=\"Job B\", Start='2009-03-05', Finish='2009-04-15'),\n",
     "      dict(Task=\"Job C\", Start='2009-02-20', Finish='2009-05-30')]\n",
     "\n",
-    "fig = ff.create_gantt(df)\n",
+    "fig = ff.create_gantt(data)\n",
     "fig.show()"
    ]
   },
