--- a/notebooks/09- Box Plots.ipynb
+++ b/notebooks/09- Box Plots.ipynb
@@ -44,6 +44,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.iloc[0:200, :]\n",
+    "data = df['total_bill']\n",
+    "x = df['time']\n",
+    "#fig = px.box(df, y=data)\n",
+    "# If a column name is given as x argument, a box plot is drawn for each value of x.\n",
+    "fig = px.box(x=x, y=data, color=x, points=\"all\")\n",
+    "fig.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -222,8 +244,8 @@
    "source": [
     "import plotly.graph_objects as go\n",
     "\n",
-    "fig = go.Figure(data=[go.Box(y=[0, 1, 1, 2, 3, 5, 8, 13, 91],\n",
-    "            boxpoints='outliers', # can also be outliers, or suspectedoutliers, or False\n",
+    "fig = go.Figure(data=[go.Box(y=[0, 1, 1, 2, 3, 5, 8, 13, 9],\n",
+    "            boxpoints='all', # can also be outliers, or suspectedoutliers, or False\n",
     "            jitter=0.3, # add some jitter for a better separation between points\n",
     "            pointpos=-1.8 # relative position of points wrt box\n",
     "              )])\n",
