--- a/notebooks/10- Scatterplot Matrix.ipynb
+++ b/notebooks/10- Scatterplot Matrix.ipynb
@@ -141,9 +141,9 @@
     "                marker=dict(color=index_vals,\n",
     "                            showscale=False, # colors encode categorical variables\n",
     "                            line_color='white', line_width=0.5),\n",
-    "                #diagonal_visible=True, # show or remove plots on diagonal\n",
+    "                diagonal_visible=False, # show or remove plots on diagonal\n",
     "                # To plot only the lower/upper half of the splom we switch the default showlowerhalf=True/showupperhalf=True to False:\n",
-    "                #showupperhalf=False, # plot only the lower/upper half\n",
+    "                showupperhalf=False, # plot only the lower/upper half\n",
     "                )                \n",
     "               )\n",
     "\n",
@@ -157,6 +157,15 @@
     ")\n",
     "\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index_vals"
    ]
   },
   {
