--- a/notebooks/11- Histograms.ipynb
+++ b/notebooks/11- Histograms.ipynb
@@ -33,8 +33,8 @@
    "source": [
     "import plotly.express as px\n",
     "df = px.data.tips()\n",
-    "fig = px.histogram(df, x=\"total_bill\")\n",
-    "#fig = px.histogram(df, x=\"total_bill\", nbins=20) # choose number of bins\n",
+    "#fig = px.histogram(df, x=\"total_bill\")\n",
+    "fig = px.histogram(df, x=\"total_bill\", nbins=55) # choose number of bins\n",
     "# Here we use a column with categorical data\n",
     "#fig = px.histogram(df, x=\"day\", nbins=2)\n",
     "fig.show()"
@@ -63,9 +63,10 @@
     "#fig = px.histogram(df, x=\"total_bill\", histnorm='probability')\n",
     "fig = px.histogram(df, x=\"total_bill\",\n",
     "                   title='Histogram of bills',\n",
+    "                   histnorm='probability',\n",
     "                   labels={'total_bill':'total bill'}, # can specify one label per df column\n",
     "                   opacity=0.8,\n",
-    "                   log_y=True, # represent bars with log scale\n",
+    "                   #log_y=True, # represent bars with log scale\n",
     "                   color_discrete_sequence=['indianred'] # color of histogram bars\n",
     "                   )\n",
     "fig.show()"
@@ -86,7 +87,7 @@
    "source": [
     "import plotly.express as px\n",
     "df = px.data.tips()\n",
-    "fig = px.histogram(df, x=\"total_bill\", color=\"sex\", opacity=0.8) \n",
+    "fig = px.histogram(df, x=\"total_bill\", color=\"sex\", opacity=0.5) \n",
     "fig.show()"
    ]
   },
@@ -107,7 +108,7 @@
    "source": [
     "import plotly.express as px\n",
     "df = px.data.tips()\n",
-    "fig = px.histogram(df, x=\"total_bill\", color=\"sex\", marginal=\"box\", # can be `box`, `violin`\n",
+    "fig = px.histogram(df, x=\"total_bill\", color=\"sex\", marginal=\"violin\", # can be `box`, `violin`\n",
     "                         hover_data=df.columns)\n",
     "fig.show()"
    ]
