--- a/notebooks/12- Distribution Plots .ipynb
+++ b/notebooks/12- Distribution Plots .ipynb
@@ -47,7 +47,7 @@
     "import plotly.express as px\n",
     "df = px.data.tips()\n",
     "fig = px.histogram(df, x=\"total_bill\", y=\"tip\", color=\"sex\",\n",
-    "                   marginal=\"box\", # or violin, rug\n",
+    "                   marginal=\"violin\", # or violin, rug\n",
     "                   hover_data=df.columns)\n",
     "fig.show()"
    ]
@@ -79,8 +79,9 @@
     "np.random.seed(1)\n",
     "\n",
     "x = np.random.randn(1000)\n",
-    "hist_data = [x]\n",
-    "group_labels = ['distplot'] # name of the dataset\n",
+    "y = np.random.randn(1000)\n",
+    "hist_data = [x,y]\n",
+    "group_labels = ['distplot x', 'distplot y'] # name of the dataset\n",
     "\n",
     "fig = ff.create_distplot(hist_data, group_labels)\n",
     "fig.show()"
@@ -114,7 +115,7 @@
     "group_labels = ['Group 1', 'Group 2', 'Group 3', 'Group 4']\n",
     "\n",
     "# Create distplot with custom bin_size\n",
-    "fig = ff.create_distplot(hist_data, group_labels, bin_size=.2)\n",
+    "fig = ff.create_distplot(hist_data, group_labels, bin_size=.2,curve_type='kde')\n",
     "fig.show()"
    ]
   },
@@ -253,7 +254,7 @@
     "# Create distplot with curve_type set to 'normal'\n",
     "\n",
     "fig = ff.create_distplot(hist_data, group_labels, colors=colors, bin_size=.25,\n",
-    "                         show_curve=False, show_hist=True, show_rug=False)\n",
+    "                         show_curve=True, show_hist=True, show_rug=True)\n",
     "\n",
     "# Add title\n",
     "fig.update_layout(title_text='Curve and Rug Plot')\n",
@@ -286,7 +287,7 @@
     "colors = ['#393E46', '#2BCDC1', '#F66095']\n",
     "\n",
     "fig = ff.create_distplot(hist_data, group_labels, colors=colors,\n",
-    "                         bin_size=[0.3, 0.2, 0.1], show_curve=False)\n",
+    "                         bin_size=[0.3, 0.2, 0.1], show_curve=True)\n",
     "\n",
     "# Add title\n",
     "fig.update(layout_title_text='Hist and Rug Plot')\n",
