--- a/notebooks/13- Violin Plots .ipynb
+++ b/notebooks/13- Violin Plots .ipynb
@@ -54,7 +54,7 @@
     "\n",
     "df = px.data.tips()\n",
     "fig = px.violin(df, y=\"total_bill\", box=True, # draw box plot inside the violin\n",
-    "                points='all', # can be 'outliers', or False\n",
+    "                points='outliers', # can be 'outliers', or False\n",
     "               )\n",
     "fig.show()"
    ]
