--- a/notebooks/14- Contour Plot.ipynb
+++ b/notebooks/14- Contour Plot.ipynb
@@ -78,7 +78,7 @@
     "fig = go.Figure(go.Histogram2dContour(\n",
     "        x = x,\n",
     "        y = y,\n",
-    "        colorscale = 'Blues'\n",
+    "        colorscale = 'rainbow'\n",
     "))\n",
     "\n",
     "fig.show()"
