--- a/notebooks/Hover Text.ipynb
+++ b/notebooks/Hover Text.ipynb
@@ -28,8 +28,8 @@
     "        #y = [2,1,6,4,4],\n",
     "        x = df['Date'], y =df['IBM'],\n",
     "        #text = [\"Text A\", \"Text B\", \"Text C\", \"Text D\", \"Text E\"],\n",
-    "        text = list(df['Date'].apply(str)),\n",
-    "        hoverinfo = 'text',\n",
+    "        #text = list(df['Date'].apply(str)),\n",
+    "        #hoverinfo = 'text',\n",
     "        marker = dict(\n",
     "            color = 'green'\n",
     "        ),\n",
