--- a/notebooks/Static Image Export.ipynb
+++ b/notebooks/Static Image Export.ipynb
@@ -65,8 +65,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig.show(renderer='pdf')\n",
+    "#fig.show(renderer='pdf')\n",
     "fig.write_image(\"fig1.pdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig.write_image(\"fig1.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig.write_image(\"fig1.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "#fig.to_json()"
    ]
   },
   {
