--- a/notebooks/08- Error Bars.ipynb
+++ b/notebooks/08- Error Bars.ipynb
@@ -104,12 +104,19 @@
     "fig = go.Figure(data=go.Scatter(\n",
     "        x=[1, 2, 3, 4],\n",
     "        y=[2, 1, 3, 4],\n",
-    "        error_y=dict(\n",
+    "        mode = \"markers\",\n",
+    "        error_x=dict(\n",
+    "            type='data',\n",
+    "            symmetric=False,\n",
+    "            array=[0.1, 0.2, 0.1, 0.1],\n",
+    "            arrayminus=[0.2, 0.4, 1, 0.2]),\n",
+    "      error_y=dict(\n",
     "            type='data',\n",
     "            symmetric=False,\n",
     "            array=[0.1, 0.2, 0.1, 0.1],\n",
     "            arrayminus=[0.2, 0.4, 1, 0.2])\n",
-    "        ))\n",
+    "        )\n",
+    ")\n",
     "fig.show()"
    ]
   },
@@ -134,6 +141,10 @@
     "        error_y=dict(\n",
     "            type='percent', # value of error bar given as percentage of y value\n",
     "            value=50,\n",
+    "            visible=True),\n",
+    "    error_x=dict(\n",
+    "            type='percent', # value of error bar given as percentage of x value\n",
+    "            value=30,\n",
     "            visible=True)\n",
     "    ))\n",
     "fig.show()"
@@ -159,7 +170,10 @@
     "        y=[2, 1, 3, 4],\n",
     "        error_x=dict(\n",
     "            type='percent',\n",
-    "            value=10)\n",
+    "            value=10),\n",
+    "        error_y=dict(\n",
+    "            type='percent',\n",
+    "            value=60)\n",
     "    ))\n",
     "fig.show()\n"
    ]
